Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14398

Whitespace in PNG texts gets corrupted in image reading

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.6.3
    • Image formats
    • None
    • Symbian^3, N8
    • d42e644daf975160f46550abc8923c08df22ae7e

    Description

      I am trying to embed some XML data in a PNG image using QImage:: text and SetText APIs.

      The text is of the form key=value where my key is "comment" and value is my xml data. The APIs works until the length of my xml data string reaches ~49. After that, nothing is inserted.

      I looked into the PNG specification. Seems the spec itself does not impose any restriction on the length of the value. Only the key length is limited to 79 bytes. (http://www.w3.org/TR/PNG/#11tEXt).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            pchethan@gmail.com chethan palakshamurthy
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes