Fixes: corruption of whitespace in text fields when reading PNG images

Task-number: QTBUG-14398
Reviewed-by: Kim